# SDLTemplate

./: CMakeLists.txt  Project.json  README.md
.github/workflows/: android.yml  emscripten.yml  linux.yml  macos.yml  windows.yml
CMake/: dawn.cmake
Source/: CMakeLists.txt  Events.c++  Events.impl.c++  Variants.cxx  Windows.cxx
Source/App/: App.Main.cxx  App.State.cxx  App.ixx  Events.cxx  main.cxx
Source/Utils/: Logger.cxx
Source/Windows/: Renderer.cxx  WGPUWindow.cxx  Window.cxx
Source/Windows/webgpu/: Backend.ixx  Instance.cxx  Surface.cxx
